--- a/homeworks/03-homework.ipynb
+++ b/homeworks/03-homework.ipynb
@@ -245,23 +245,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "45536de9",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n",
-      "   _~_      _~_      _~_   \n",
-      "  (o o)    (o o)    (o o)  \n",
-      " /  V  \\  /  V  \\  /  V  \\ \n",
-      "/(  _  )\\/(  _  )\\/(  _  )\\\n",
-      "  ^^ ^^    ^^ ^^    ^^ ^^  \n"
-     ]
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "N = int(input())\n",
     "\n",
